# Project_Template

./: start_poetry_instructions.txt
project-template/: pyproject.toml
project-template/submodule1/: min-requirements.txt  pyproject.toml  requirements.txt
project-template/submodule1/Help Resources/: Your Python Coding Environment on Windows_ Setup Guide – Real Python.html  project_setup_guide.txt
project-template/submodule1/Help Resources/Your Python Coding Environment on Windows_ Setup Guide – Real Python_files/: 2220911568135371  count-data.js.download  gist.min.js.download  index.html  js  js(1)  realpython.min.79095a845f27.css  saved_resource(1).html  saved_resource.html
project-template/submodule1/project_template/: log_config.json  logging_config.py  project_config.py
project-template/submodule1/src/: base_webscraper.py  project_config.py  setup.py.OLD  start.py
project-template/submodule1/src/configs/: json_logging.json  loggers.py
project-template/submodule2/: __init__.py  configure_log.py  log_config.json
